--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ nav{
 }
 
 .navbar{
-    width: 80%;
+    width: 60%;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -41,10 +41,10 @@ nav{
     font-size: 15px;
     font-weight: 700;
     list-style: none;
-    padding: 0 20px;
+    padding: 0 10px;
 }
 
-.navbar li:last-child{
+.nav-right{
     display: flex;
     align-items: center;
 }
@@ -157,3 +157,72 @@ nav{
     right: -30%;
     bottom: 45%;
 }
+
+/* Responsive designing */
+@media only screen and (max-width: 600px) {
+    .container{
+        height: 100vh;
+    }
+    
+    nav{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 10px 0;
+    }
+    
+    .logo{
+        font-size: 1rem;
+        width: fit-content;
+        padding: 0;
+        padding-right: 10px;
+    }
+    
+    .navbar{
+        width: auto;
+        justify-content: space-between;
+        margin: 10px 0;
+    }
+    
+    .navbar li{
+        padding: 0;
+        padding-right: 10px;
+    }
+    
+    .navbar-line{
+        margin: 0 10px;
+        background-color: white;
+        height: 2px;
+    }
+
+    .main h1{
+        margin: 25px 10px;
+        font-size: 1.5rem;
+        text-align: center;
+    }
+    
+    .main{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .main button{
+        margin: 0;
+        font-size: 14px;
+        padding: 10px 20px;
+    }
+
+    .card-1{
+        right: 5%;
+        top: 50%;
+    }
+    
+    .card-2{
+        right: 40%;
+        bottom: 5%;
+    }
+    
+  }
